# snipets

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  global-software-licenses.txt
.gitea/workflows/: build-changelogs.yaml
.github/workflows/: build-changelogs.yaml
scripts/: changelogs-generator.sh
shared/community/: ACCESSIBILITY.md  AI_POLICY.md  ARCHITECTURE.md  README.md
shared/configs/: .prettierrc.cjs  editorconfig  eslint.config.cjs  eslint.config.mjs  prettier.config.mjs  pyproject.toml  rustfmt.toml  tailwind.config.cjs  tailwind.config.mjs  tsconfig.base.json  tsconfig.browser.json  tsconfig.node.json
shared/gitignore/: android.gitignore  ansible.gitignore  astro.gitignore  blender.gitignore  bun.gitignore  conda.gitignore  cpp.gitignore  csharp.gitignore  deno.gitignore  docker.gitignore  eclipse.gitignore  emacs.gitignore  flutter.gitignore  go.gitignore  godot.gitignore  gradle.gitignore  helm.gitignore  huggingface.gitignore  java.gitignore  jetbrains.gitignore  jupyter.gitignore  kotlin.gitignore  kubernetes.gitignore  laravel.gitignore  linux.gitignore  macos.gitignore  maven.gitignore  nextjs.gitignore  node.gitignore  npm.gitignore  nuxt.gitignore  pdm.gitignore  php.gitignore  pnpm.gitignore  poetry.gitignore  pulumi.gitignore  python.gitignore  pytorch.gitignore  react-native.gitignore  remix.gitignore  (+16 more)
shared/licenses/: AFL-3.0.txt  Artistic-2.0.txt  BSD-3-Clause.txt  BSL-1.0.txt  CC-BY-4.0.txt  CC-BY-SA-4.0.txt  CC0-1.0.txt  CDDL-1.0.txt  EPL-2.0.txt  GPL-2.0.txt  LGPL-2.1.txt  LGPL-3.0.txt  MPL-2.0.txt  MS-PL.txt  MS-RL.txt  WTFPL.txt  Zlib.txt
